# fashion-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
agents/base/: executor.py  skill.py
agents/orchestrator/: conversation.py  main.py  router.py  routing_agent.py  state.py
agents/order/: agent.py  main.py  tools.py
agents/order/skills/: __init__.py  order_processing.py
agents/search/: agent.py  agent_card.py  executor.py  main.py  tools.py
agents/stylist/: agent.py  main.py  tools.py
docs/: README.md  api-reference.md  implementation-changes.md  orchestrator.md  order-agent.md  search-agent.md  shared-components.md  stylist-agent.md
docs/implements/: orchestrator-memory-flexible-replanning.md
services/orchestrator/: Dockerfile  conversation.py  main.py  plan_executor.py  planning_agent.py  routing_agent.py  schemas.py  workflow_state.py
services/order/: Dockerfile  agent.py  executor.py  main.py  schemas.py
services/search/: Dockerfile  agent.py  main.py  schemas.py
services/stylist/: Dockerfile  agent.py  executor.py  main.py  schemas.py
shared/: backend_client.py  config.py  logging_config.py
shared/base/: __init__.py  agent.py
shared/base_agent/: __init__.py  agent.py  executor.py  memory.py  tool.py  yaml_loader.py
shared/models/: __init__.py  agent.py  order.py  user.py
tests/: conftest.py
tests/test_agents/: test_order_tools.py  test_search_tools.py
tests/test_integration/: test_mock_backend.py
tests/test_orchestrator/: test_conversation.py  test_router.py  test_state.py
(+51 files in other folders)
